<resources>
    <string name="app_name">Drinking games</string>
    <string name="circleOfDeath">Circle of death</string>
    <string name="aroundTheWorldRoundOne">Around the World (Round 1)</string>
    <string name="bizkit">Bizkit</string>
    <string name="action_settings">Settings</string>
    <string name="action_retry">New game</string>
    <string name="action_cardsRemaining">51 cards</string>
    <string name="action_rules">Rules</string>
    <string name="action_help">Help</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="less">Less</string>
    <string name="more">More</string>
    <string name="tutorialWelcome">Welcome to the application "Drinking games"! Have fun, but remember to drink responsibly.</string>
    <string name="tutorialPlayers">You can add players by clicking this icon on the menu.</string>
    <string name="tutorialRules">At any time, you can click on this bar to display the rule.</string>
    <string name="card">card</string>
    <string name="dice">dice</string>
    <string name="player">Player</string>
    <string name="players">Players</string>
    <string name="master">Great Master</string>
    <string name="queen">Question\'s queen</string>
    <string name="snake">Snake eyes</string>
    <string name="biscuit">Biscuit</string>
    <string name="gameOver">Game over</string>
    <string name="restartGame">Would you like to play again?</string>
    <string name="addPlayer">Add a player</string>
    <string name="addRule">Add a rule</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="tutorial">Tutorial</string>
    <string name="playerEmpty">No player added (you did not enter anything)</string>
    <string name="noPlayer">No player</string>
    <string name="noRule">No rule</string>
    <string name="currentPlayer">Current player:</string>
    <string name="action_addPlayers">Add players</string>
    <string name="action_players">Info about players</string>
    <string name="ruleCard">Rule for this card: </string>
    <string name="ruleDice">Rule for this outcome: </string>
    <string name="youDrink">You drink</string>
    <string name="youGive">You give</string>
    <string name="sip">sip</string>
    <string name="equals">Equals</string>
    <string name="drank">drank</string>
    <string name="cardOne">Card one</string>
    <string name="cardTwo">Card two</string>
    <string name="cardThree">Card three</string>
    <string name="cardFour">Card four</string>
    <string name="cardFive">Card five</string>
    <string name="hearts">Hearts</string>
    <string name="spades">Spades</string>
    <string name="diamonds">Diamonds</string>
    <string name="clubs">Clubs</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="between">Between</string>
    <string name="outside">Outside</string>
    <string name="same">Same</string>
    <string name="different">Different</string>
    <string name="helpAroundTheWorldRoundOne">Help for \"Around the world (round one)\"</string>
    <string name="aroundTheWorldRoundOneSteps">Each player must make a prediction about the card to be drawn on their turn. If the player guesses correctly, they may give a sip. If their guess is incorrect they must instead take a sip.</string>
    <string name="aroundTheWorldRoundOneStepsPartOne">The player must predict the color of the card draw, \"red\" (hearts and diamonds) or \"black\" (clubs and spades).</string>
    <string name="aroundTheWorldRoundOneStepsPartTwo">The player must predict whether the value of the card drawn will be \"higher\" or \"lower\" than the first card. A third option is \"same\". Caution: the ace count as the lowest card.</string>
    <string name="aroundTheWorldRoundOneStepsPartThree">The player predicts whether the value of the card drawn will be between the values of the first two cards, \"in\", or outside of those values, \"out\". There is a third option of \"same\".</string>
    <string name="aroundTheWorldRoundOneStepsPartFour">For the fourth card, the player must predict the suit of the card drawn by saying he either has the suit or has not.</string>
    <string name="aroundTheWorldRoundOneStepsPartFive">"The fifth card's question is not (directly) related to the cards drawn before it. Rather, the player simply predicts which suit the card will be."</string>
    <string name="playerEmptyAroundTheWorld">You must add players to play this game</string>
    <string name="doubleText">Since you did a double, you can give a player</string>
    <string name="helpRuleCircleOfDeath">You draw a king, you must choose a rule.\n\nPopular rules:\n- You can\'t say the verb \"drink\".\n- Buffalo (you must drink with your left hand).</string>
    <string name="helpRuleBizkit">You just did a twelve, you must choose a rule.\n\nPopular rules:\n- You can\'t say the verb \"drink\".\n- Buffalo (you must drink with your left hand).</string>
    <string name="aroundTheWorldRoundOnePartOne">Red or Black?</string>
    <string name="aroundTheWorldRoundOnePartTwo">More or less?</string>
    <string name="aroundTheWorldRoundOnePartThree">Between or outside?</string>
    <string name="aroundTheWorldRoundOnePartFour">Same or different?</string>
    <string name="aroundTheWorldRoundOnePartFive">Hearts, spades, diamonds or clubs?</string>
    <string-array name="rulesSmallCircleOfDeath">
        <item>Everyone drinks</item>
        <item>Drink two sips</item>
        <item>Drink three sips</item>
        <item>Drink four sips</item>
        <item>Drink five sips</item>
        <item>Drink six sips</item>
        <item>I have already / I have never</item>
        <item>In my suitcase</item>
        <item>Rhymes</item>
        <item>Themes</item>
        <item>Snake eyes</item>
        <item>Question master</item>
        <item>Make up a rule</item>
    </string-array>
    <string-array name="rulesLongCircleOfDeath">
        <item>All players must drink a sip.</item>
        <item>The player who draws this card must drink two sips.</item>
        <item>The player who draws this card must drink three sips.</item>
        <item>The player who draws this card must drink four sips.</item>
        <item>The player who draws this card must drink five sips.</item>
        <item>The player who draws this card must drink six sips.</item>
        <item>The player who draws this card must say something he already did or never done. All the other players must drink one sip if they are not in the case of the player.</item>
        <item>The player who draws this card start the game by saying \"In my suitcase, I have \" and add an object or a person. The next player must add another object and so on until one of the players forget the contents of the suitcase.</item>
        <item>The player who draws this card say a word. The other players must say another word rhyming with the first one until one of them fail.</item>
        <item>The player who draws this card choose a theme (ex : brands). Every player must choose a valid word.</item>
        <item>The player who draws this card can say \"Snake eyes !\" if he looks right into the eyes of another player. That player must drink one sip.</item>
        <item>The player who draws this card tries to get people to answer his question. If one of them answer, the player must drink (this applies until another player draws a queen).</item>
        <item>The player who draws this card make up a new rule until the end of the game.</item>
    </string-array>

    <string-array name="rulesSmallBizkit">
        <item>Give a sip</item>
        <item>Biscuit</item>
        <item>Previous player</item>
        <item>You drink a sip</item>
        <item>Next player</item>
        <item>Bizkit</item>
        <item>Everyone drinks</item>
        <item>Previous player</item>
        <item>You drink a sip</item>
        <item>Next player</item>
        <item>Great Master</item>
    </string-array>
    <string-array name="rulesLongBizkit">
        <item>You choose a player. He must drink a sip.</item>
        <item>The current player is the \"Biscuit\". Whenever the number three appears on a dice, he must drink a sip until another player take his place. Also he must drink a sip right now.</item>
        <item>The player that played before you must drink a sip.</item>
        <item>The current player must drink a sip.</item>
        <item>The next player must drink a sip.</item>
        <item>Everyone must put their thumb on their forehand and yell \"Bizkit\"!. The last one must drink a sip.</item>
        <item>All the players must drink a sip</item>
        <item>The player that played before you must drink a sip.</item>
        <item>The current player must drink a sip.</item>
        <item>The next player must drink a sip.</item>
        <item>The current player is the "Great Master". Everyone must call him this way otherwise they must drink a sip. He also create a new rule for this game.</item>
    </string-array>

</resources>
