<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.antoinedelia.lebarbu_versionalcool.MainActivity">

    <item
        android:id="@+id/action_cardsRemaining"
        android:orderInCategory="100"
        android:title="@string/action_cardsRemaining"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_retry"
        android:icon="@drawable/refresh"
        android:orderInCategory="100"
        android:title="@string/action_retry"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_infoPlayers"
        android:icon="@drawable/players"
        android:orderInCategory="100"
        android:title="@string/action_players"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_infoRules"
        android:icon="@drawable/rules"
        android:orderInCategory="100"
        android:title="@string/action_rules"
        app:showAsAction="ifRoom" />
</menu>
